completed layout, and created contact and portfolio pages

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Kyle Baldwin</a>
+      <!-- <a class="navbar-brand" href="#">Kyle Baldwin</a> -->
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+       <ul class="nav navbar-nav navbar-left">
+          <li><h1>Kyle Baldwin</h1></li>
+       </ul>
        <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -42,6 +45,18 @@
 					<div class="page-header">
 						<h2>About Me</h2>
 					</div>
+          <img id="profile" src="img/temp-profile.jpg">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, similique non? Tenetur repellat fugit voluptate laudantium doloribus ea, quidem facilis, error voluptatum, minus, eligendi consequuntur aspernatur numquam reprehenderit? Architecto, iure?</p>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempore inventore saepe at necessitatibus, temporibus quae quod facere nisi! Quidem alias, est temporibus nulla quae ratione, minus eveniet tempora ipsum.</p>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, similique non? Tenetur repellat fugit voluptate laudantium doloribus ea, quidem facilis, error voluptatum, minus, eligendi consequuntur aspernatur numquam reprehenderit? Architecto, iure?</p>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempore inventore saepe at necessitatibus, temporibus quae quod facere nisi! Quidem alias, est temporibus nulla quae ratione, minus eveniet tempora ipsum.</p>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, similique non? Tenetur repellat fugit voluptate laudantium doloribus ea, quidem facilis, error voluptatum, minus, eligendi consequuntur aspernatur numquam reprehenderit? Architecto, iure?</p>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempore inventore saepe at necessitatibus, temporibus quae quod facere nisi! Quidem alias, est temporibus nulla quae ratione, minus eveniet tempora ipsum.</p>
 
 	
 				</div>
@@ -52,8 +67,31 @@
 			<div class="panel panel-default">
   				<div class="panel-body">
 					<div class="page-header">
-						<h2>Connect with Me</h2>
+						<h3 class="text-center">Connect with Me</h3>
 					</div>
+
+            <div class="row">
+              <div class="col-md-3 social-icon">
+                 <a href="https://github.com/kjmbaldwin" target="_blank" class="thumbnail">
+                  <img alt="Github Link" src="img/github.png">
+                </a>
+              </div>
+              <div class="col-md-3 social-icon">
+                <a href="https://twitter.com/kjmbaldwin" target="_blank" class="thumbnail">
+                  <img alt="Twitter Link" src="img/twitter.png">
+                </a>
+              </div>
+              <div class="col-md-3 social-icon">
+                <a href="https://www.linkedin.com/in/kylebaldwin/" target="_blank" class="thumbnail">
+                  <img alt="Linkedin Link" src="img/linkedin.png">
+                </a>
+              </div>
+              <div class="col-md-3 social-icon">
+                <a href="https://stackexchange.com/users/11709756/kjmbaldwin" target="_blank" class="thumbnail">
+                  <img alt="Stackoverflow Link" src="img/stackoverflow.png">
+                </a>
+              </div> 
+          </div>
 
   				</div>
   			</div>
@@ -63,6 +101,9 @@
 
 </div>
 
+<footer class="footer navbar-fixed-bottom">
+  <p class="text-center">© Copyright 2017 Kyle Baldwin</p>
+</footer>
 
 </body>
 </html>
